# romea-ros2-teleop

./: .gitlab-ci.yml  AUTHORS  CMakeLists.txt  README.md  package.xml  romea_teleop.repos  romea_teleop.rosinstall  romea_teleop_public.repos
config/: dualshock4_omni_steering_remappings.yaml  dualshock4_one_axle_steering_remappings.yaml  dualshock4_skid_steering_remappings.yaml  dualshock4_two_axle_steering_remappings.yaml  xbox_omni_steering_remappings.yaml  xbox_one_axle_steering_remappings.yaml  xbox_skid_steering_remappings.yaml  xbox_two_axle_steering_remappings.yaml
include/romea_teleop/: command_parameters.hpp  joystick_parameters.hpp  omni_steering_teleop.hpp  one_axle_steering_teleop.hpp  skid_steering_teleop.hpp  teleop.hpp  teleop_base.hpp  two_axle_steering_teleop.hpp  visibility_control.h
launch/: four_wheel_steering_teleop.launch  four_wheel_steering_teleop.launch.py  omni_steering_teleop.launch.py  one_axle_steering_teleop.launch.py  skid_steering_teleop.launch.py  skid_steering_teleop.launch.xml  two_axle_steering_teleop.launch.py  two_wheel_steering_teleop.launch.py
romea_teleop/: CMakeLists.txt  package.xml
romea_teleop_bringup/: CMakeLists.txt  README.md  package.xml
romea_teleop_bringup/launch/: mobile_base_teleop.launch.py
romea_teleop_bringup/python/: romea_teleop_bringup.py
romea_teleop_description/: CMakeLists.txt  README.md  package.xml
romea_teleop_description/config/: dualshock4_omni_steering_remappings.yaml  dualshock4_one_axle_steering_remappings.yaml  dualshock4_skid_steering_remappings.yaml  dualshock4_two_axle_steering_remappings.yaml  keyboard_implement_remappings.yaml  keyboard_one_axle_steering_remappings.yaml  keyboard_two_axle_steering_remappings.yaml  pynput_joy_implement_remappings.yaml  pynput_joy_one_axle_steering_remappings.yaml  pynput_joy_two_axle_steering_remappings.yaml  xbox_implement_remappings.yaml  xbox_omni_steering_remappings.yaml  xbox_one_axle_steering_remappings.yaml  xbox_skid_steering_remappings.yaml  xbox_two_axle_steering_remappings.yaml
romea_teleop_description/python/: romea_teleop_description.py
romea_teleop_description/test/: test_omni_steering_base_info.yaml  test_omni_steering_teleop_config.yaml  test_one_axle_steering_base_info.yaml  test_one_axle_steering_teleop_config.yaml  test_skid_steering_base_info.yaml  test_skid_steering_teleop_config.yaml  test_teleop_description.py  test_two_axle_steering_base_info.yaml  test_two_axle_steering_teleop_config.yaml
romea_teleop_drivers/: CMakeLists.txt  README.md  package.xml
romea_teleop_drivers/launch/: teleop.launch.py
romea_teleop_drivers/src/: command_parameters.cpp  implement_teleop.cpp  joystick_parameters.cpp  omni_steering_teleop.cpp  omni_steering_teleop_node.cpp  one_axle_steering_teleop.cpp  one_axle_steering_teleop_node.cpp  skid_steering_teleop.cpp  skid_steering_teleop_node.cpp  teleop_base.cpp  two_axle_steering_teleop.cpp  (+1 more)
romea_teleop_drivers/test/: CMakeLists.txt  implement_remappings.yaml  omni_steering_teleop.yaml  omni_steering_teleop_dualshock4.yaml  omni_steering_teleop_test.cpp  omni_steering_teleop_xbox.yaml  one_axle_steering_teleop.yaml  one_axle_steering_teleop_test.cpp  one_axle_steering_teleop_xbox.yaml  skid_steering_teleop.yaml  skid_steering_teleop_dualshock4.yaml  skid_steering_teleop_test.cpp  skid_steering_teleop_xbox.yaml  testable_teleop.hpp  two_axle_steering_teleop.yaml  two_axle_steering_teleop_2_axes.yaml  two_axle_steering_teleop_dualshock4.yaml  two_axle_steering_teleop_test.cpp  two_axle_steering_teleop_test_2_axes.cpp  two_axle_steering_teleop_test_4_axes.cpp
src/: command_parameters.cpp  joystick_parameters.cpp  omni_steering_teleop.cpp  one_axle_steering_teleop.cpp  one_axle_steering_teleop_node.cpp  skid_steering_teleop.cpp  skid_steering_teleop_node.cpp  teleop_base.cpp  two_axle_steering_teleop.cpp  two_axle_steering_teleop_node.cpp
test/: CMakeLists.txt  omni_steering_teleop_dualshock4.yaml  omni_steering_teleop_test.cpp  omni_steering_teleop_xbox.yaml  one_axle_steering_teleop_dualshock4.yaml  one_axle_steering_teleop_test.cpp  one_axle_steering_teleop_xbox.yaml  skid_steering_teleop_dualshock4.yaml  skid_steering_teleop_test.cpp  skid_steering_teleop_xbox.yaml  testable_teleop.hpp  two_axle_steering_teleop_dualshock4.yaml  two_axle_steering_teleop_test.cpp  two_axle_steering_teleop_xbox.yaml
(+17 files in other folders)
