<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>romea_teleop</name>
  <version>0.0.0</version>
  <description>Romea joystick metapackage</description>

  <author>Jean Laneurit</author>
  <maintainer email="jean.laneurit@inrae.fr">Jean Laneurit</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>romea_teleop_bringup</exec_depend>
  <exec_depend>romea_teleop_description</exec_depend>
  <exec_depend>romea_teleop_drivers</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
